[package]
name = "esp32-std-fft"
version = "0.1.0"
authors = ["a-givertzman <a.givertzman@icloud.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
# opt-level = 3

[features]
# default = ["experimental"]
# Enable this feature for the build to use the PlatformIO tooling instead of the native ESP-IDF tooling under the hood
pio = ["esp-idf-sys/pio"]
# experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
log = "0.4"

esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}
embedded-svc = "0.24.0"

heapless = "0.7.16"


[build-dependencies]
embuild = { version = "0.31", features = ["elf"] }
anyhow = "1"
# embuild = "0.31.1"
